[options]
install_requires =
    kivy>=2.0.0
    trio
    outcome

[options.extras_require]
dev =
    pytest>=3.6
    pytest-cov
    sphinx-rtd-theme
    coveralls
    setuptools
    sphinx
    flake8
    wheel
    pytest-trio
    sphinxcontrib-trio
    sphinx-autodoc-typehints
    pytest-kivy

[flake8]
ignore = E125,E126,E127,E128,E402,E741,E731,W503,F401,W504,F841,E722
max-line-length = 80
exclude = __pycache__,.tox,.git/,doc/,build/,.eggs/
statistics = true
show-source = true
count = true
